Contact Form Send button overlapping textarea fixed

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -144,6 +144,6 @@ body {
 }
 
 .modal-footer {
-    margin-top: -80px;
+    margin-top: -70px;
     
 }
